Product Recommendations feature
- Calculates "price per standard unit" (e.g., price/kg, price/L, price/item) for all products, handling unit conversions (g to kg, ml to L) and treating specific categories like electronics as countable items.
- Recommendation endpoint (`/api/recommendations`) now suggests alternatives based on:
    - Better value: Products in the same category, unit type (weight, volume, count), and currency that are cheaper per standard unit.
    - Fallback: If no "better value" options are found, suggests other variants of the queried product or the cheapest available reference product.
- Added a manual product data reload endpoint (`/api/admin/products/reload`) to refresh product data from CSVs at runtime for testing and demonstration of dynamic data handling.
- Enhanced logging across services (BasketOptimizationService, PriceAlertService, RecommendationService) for improved debugging and to trace data flow during runtime updates and recommendation generation.
- Refined comments in several classes to clarify complex logic and improve code readability for final review.
- Addressed and fixed issues related to classpath resource updating in an IDE environment for live CSV data changes by implementing the reload endpoint and configuring Spring Boot DevTools.